Prevent posting from jumping below the user aside.

--- a/webapp/byceps/blueprints/core/static/style/style.css
+++ b/webapp/byceps/blueprints/core/static/style/style.css
@@ -418,7 +418,7 @@ nav.board-breadcrumbs li:last-child {
   width: 120px;
 }
 .board-postings .body {
-  width: 530px;
+  width: 528px;
 }
 
 .board-postings aside .creator {
